M169/k8s-version/02-game.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
      - name: game
        image: ghcr.io/mausemarc/m169-docker/nightatcasino:v1
        ports:
        - containerPort: 7681
---
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  selector:
    app: game
  ports:
  - port: 7681
    targetPort: 7681
  type: ClusterIP
