M169/k8s-version/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: casino-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: casino.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 80
